--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -88,6 +88,7 @@
             .clear
       .bg-footer
         %ul
+          %li Patatoon 2010© Todos los derechos reservados
           %li= link_to "inicio", root_path
           %li.last= link_to "Sobre Patatoon", about_us_path
       /[if IE] 
