--- a/public/stylesheets/sidebar.css
+++ b/public/stylesheets/sidebar.css
@@ -1,3 +1,5 @@
+/* @override http://localhost:3000/stylesheets/sidebar.css */
+
 #container #sidebar {
 	float:right;
 	width:250px;
@@ -40,10 +42,14 @@
 #sidebar #chunteros,
 #sidebar #punteros {
 	margin-top:27px;
+	border-bottom: 1px dotted #a6c6e1;
+	padding-bottom: 1em;
+	margin-bottom: 2em;
 }
 
 #sidebar h3 {
 	margin-bottom:15px;
+	color: #b7d274;
 }
 
 #sidebar .ranking li {
