Fixed teams bug on admin

--- a/app/views/home/_sidebar.haml
+++ b/app/views/home/_sidebar.haml
@@ -23,6 +23,6 @@
     %li.facebook
       %a{:href => "#"}
     %li.twitter
-      %a{:href => "#"}
+      %a{:href => URI.encode("http://twitter.com?status=Estoy participando en Patatoon. ¿No se une?")}
     %li.email
       %a{:href => "#"}
