--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
   %head
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}/
     %title= [@title, "Patatoon"].compact.join(" | ")
-    = stylesheet_link_tag 'reset','../javascripts/fancybox/jquery.fancybox-1.3.1','layout','sidebar','flags','formtastic','formtastic_changes','banner', :cache => "styles"
+    = stylesheet_link_tag 'reset','../javascripts/fancybox/jquery.fancybox-1.3.1','layout','sidebar','flags','formtastic','formtastic_changes','banner','pop', :cache => "styles"
     /[if IE] 
       = stylesheet_link_tag "ie"
     = yield :include 
@@ -105,7 +105,7 @@
           </div>
       = javascript_include_tag 'jquery', 'jrails','fancybox/jquery.fancybox-1.3.1.pack','fancybox/jquery.easing-1.3.pack', :cache => "utils"
       = javascript_include_tag 'fancybox/jquery.mousewheel-3.0.2.pack', :cache => "utils3"
-      = javascript_include_tag 'jcarousellite_1.0.1.min', 'countdown/jquery.countdown.min','date','jquery.countdown-es', :cache => "utils2"
+      = javascript_include_tag 'jcarousellite_1.0.1.min', 'countdown/jquery.countdown.min','date','jquery.countdown-es','jquery.pop', :cache => "utils2"
       = javascript_include_tag 'application', :cache => "app"
       = javascript_include_tag "http://s7.addthis.com/js/250/addthis_widget.js"
       :erb
