--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -124,6 +124,40 @@ body.home #city {
 	margin-bottom: 0px;
 }
 
+#content div.change {
+	font-weight: normal;
+	font-size: 12px;
+	color: #c45b7a;
+	font-style: normal;
+}
+
+#content div.change div.change_title {
+	float: left;
+	display: block;
+	margin-right: 10px;
+	margin-top: 4px;
+}
+
+div.pop_menu {
+	padding-top: 2em !important;
+}
+
+#championships div.champ a {
+	text-decoration: none;
+	margin-bottom: 0px;
+	display: block;
+	padding: 10px;
+	padding-bottom: 10px;
+}
+
+#championships div.champ a:hover {
+	background-color: #cd7c89;
+}
+
+#content div.change div.pop {
+	float: left;
+}
+
 body.predictions.home #city {
 	margin-top: 5em;
 	margin-bottom: -5em;
