--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -58,4 +58,7 @@
         /     = link_to "Lee las reglas", rules_path, {:id=>"reules", :class=>"button"}
         %li.img
           %a{:href =>rules_path}
-            %img{:height => "271", :src => "images/lanbanner.png", :width => "815"}/
+            %img{:height => "271", :src => "/images/lanbanner.png", :width => "815"}/
+        %li.img
+          %a{:href =>rules_path}
+            %img{:height => "271", :src => "/images/ganadorbanner.png", :width => "815"}/
