--- a/app/views/home/_sidebar.haml
+++ b/app/views/home/_sidebar.haml
@@ -10,6 +10,8 @@
 /   %h3 los chunteros
 /   %ul.ranking= render :partial => "home/top_season",:collection=>@top_season
 
+= render :partial => "gangs/last_gangs"
+
 #punteros
   %h3 los patatooneros
   %ul.ranking= render :partial => "home/top_times", :collection => @top_times
