--- a/app/views/gangs/_tag_cloud.html.erb
+++ b/app/views/gangs/_tag_cloud.html.erb
@@ -2,7 +2,7 @@
   <div class="portlet_title"><strong><%= "Etiquetas de grupo" %></strong></div>
   <div class="portlet_content">
     <ul>
-      <% tag_cloud_groups %w(l1 l2 l3 l4 l5 l6 l7) do |tag, css_class| %>
+      <% tag_cloud_gangs %w(l1 l2 l3 l4 l5 l6 l7) do |tag, css_class| %>
         <li class="<%= css_class -%>"><%= link_to tag.name, tag_gangs_path(tag.name) %></li>
       <% end -%>
     </ul>
