--- a/app/views/gangs/index.html.erb
+++ b/app/views/gangs/index.html.erb
@@ -1,6 +1,8 @@
 <div class="portlet portletH" id="portlet_gangs">
     <h2><span><%= "Manchas de Patatoon" %></span></h2>
 
+    <%= display_flashes  %>
+    
     <div class="description">
       <p>Las manchas de Patatoon permite unirte a tus amigos en común. En el futuro, nos permitirá compartir
       elementos, historias, momentos, fotos y todo lo que deseen. </p>
