--- a/app/views/admin/players/_form.html.haml
+++ b/app/views/admin/players/_form.html.haml
@@ -1,10 +1,9 @@
 - semantic_form_for ["admin",@player] do |form|
   - form.inputs do
-    = form.input :id
-    = form.input :name
-    = form.input :born_at
-    = form.input :country
-    = form.input :team
+    = form.input :name, :label => "Nombre"
+    = form.input :born_at, :label => "Fecha de nacimiento", :as=>:date
+    = form.input :country, :label => "Pais"
+    = form.input :team, :label => "Equipo principal"
     = form.input :bio, :input_html => {:class => "tinymce"}
     
   - form.buttons do
