--- a/app/views/admin/players/index.html.haml
+++ b/app/views/admin/players/index.html.haml
@@ -1,10 +1,10 @@
-- @title = "Administración Players "
+- @title = "Administración Jugadores "
 
 #admin.index
-  %h1= "Administrando Players"
+  %h1= "Administrando Jugadorees"
 
   #admin_menu
-    = link_to "Nuevo player", new_admin_player_path
+    = link_to "Nuevo jugador", new_admin_player_path
 
   %table{:id=>"players_table"}
     %thead
