Updated some fix

--- a/app/views/admin/players/index.html.haml
+++ b/app/views/admin/players/index.html.haml
@@ -1,7 +1,7 @@
 - @title = "Administración Jugadores "
 
 #admin.index
-  %h1= "Administrando Jugadorees"
+  %h1= "Administrando Jugadores"
 
   #admin_menu
     = link_to "Nuevo jugador", new_admin_player_path
