--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,7 @@
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}/
     %title= [@title, "Patatoon"].compact.join(" | ")
     = stylesheet_link_tag 'reset','../javascripts/fancybox/jquery.fancybox-1.3.1','layout','sidebar','flags','formtastic','formtastic_changes','banner','pop', :cache => "styles"
+    %link{ :rel=>"shortcut icon", :href=>"http://patatoon.com/favicon.ico"}
     /[if IE] 
       = stylesheet_link_tag "ie"
     = yield :include 
