--- a/public/stylesheets/banner.css
+++ b/public/stylesheets/banner.css
@@ -52,7 +52,7 @@
 }
 
 #banner-cont div.facebook {
-	background:url(../images/banners/banner-1.png) no-repeat;
+	background:url(../images/banners/banner-1.jpg) no-repeat;
 	padding-left:348px;
 	padding-right:45px;
 }
