--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -530,7 +530,7 @@ div#chatango {
 
 #banner-cont .banner-1 {
 	position: relative;
-	/*background:url(../images/banners/banner-1.png) no-repeat;*/
+	/*background:url(../images/banners/banner-1.jpg) no-repeat;*/
 }
 
 #banner-cont .banner-1 img {
